--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
     "@tngtech/ngx-structurals": "^1.1.0",
+    "karma-junit-reporter": "^2.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -33,14 +34,15 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^13.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^13.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
     "karma": "~5.0.1",
     "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "^2.0.2",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.4.2",
