--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,18 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.8
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       - name: Install dependencies
         run: npm install
       - name: Lint
@@ -24,4 +36,4 @@ jobs:
       - name: Build
         run: npm run build -- --prod
       - name: Test
-        run: npm test -- --configuration=ci
+        run: ng test -- --watch=false --progress false --code-coverage
