--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 # GitHub Actions docs
 # https://help.github.com/en/articles/about-github-actions
 # https://help.github.com/en/articles/workflow-syntax-for-github-actions
-name: Coverage
+name: build
 on: [push]
 jobs:
   build:
@@ -33,7 +33,8 @@ jobs:
         run: npm install
       - name: Lint
         run: npm run lint
-      - name: Build
-        run: npm run build -- --prod
       - name: Test
         run: npm test -- --watch=false --progress false --code-coverage --browsers=ChromeHeadless
+      - name: Build
+        run: npm run build -- --prod
+
