--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@angular/platform-browser": "~10.0.12",
     "@angular/platform-browser-dynamic": "~10.0.12",
     "@angular/router": "~10.0.12",
-    "@tngtech/ngx-structurals": "^1.1.1",
+    "@tngtech/ngx-structurals": "^1.1.2",
     "karma-junit-reporter": "^2.0.1",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -34,21 +34,21 @@
     "@angular/cli": "~10.0.7",
     "@angular/compiler-cli": "~10.0.12",
     "@angular/language-service": "~10.0.12",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.6",
+    "@types/node": "^14.6.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.0.2",
+    "karma-coverage": "^2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.3"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
