--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/compiler": "~10.0.12",
     "@angular/core": "~10.0.12",
     "@angular/forms": "~10.0.12",
+    "@angular/material": "^10.2.0",
     "@angular/platform-browser": "~10.0.12",
     "@angular/platform-browser-dynamic": "~10.0.12",
     "@angular/router": "~10.0.12",
