--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.1",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "~10.2.0",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
@@ -51,6 +51,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "~4.0.2"
   }
 }
