--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.1",
-    "@angular/cdk": "~10.2.0",
-    "@angular/common": "~10.1.1",
-    "@angular/compiler": "~10.1.1",
-    "@angular/core": "~10.1.1",
-    "@angular/forms": "~10.1.1",
-    "@angular/material": "^10.2.0",
-    "@angular/platform-browser": "~10.1.1",
-    "@angular/platform-browser-dynamic": "~10.1.1",
-    "@angular/router": "~10.1.1",
+    "@angular/animations": "~10.1.6",
+    "@angular/cdk": "~10.2.5",
+    "@angular/common": "~10.1.6",
+    "@angular/compiler": "~10.1.6",
+    "@angular/core": "~10.1.6",
+    "@angular/forms": "~10.1.6",
+    "@angular/material": "^10.2.5",
+    "@angular/platform-browser": "~10.1.6",
+    "@angular/platform-browser-dynamic": "~10.1.6",
+    "@angular/router": "~10.1.6",
     "@tngtech/ngx-structurals": "^1.1.2",
     "karma-junit-reporter": "^2.0.1",
     "pokesprite-spritesheet": "github:msikma/pokesprite-spritesheet#master",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.1",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.1",
-    "@angular/cli": "~10.1.1",
-    "@angular/compiler-cli": "~10.1.1",
-    "@angular/language-service": "~10.1.1",
+    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular/cli": "~10.1.7",
+    "@angular/compiler-cli": "~10.1.6",
+    "@angular/language-service": "~10.1.6",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.10.0",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^14.11.10",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -48,6 +48,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "^6.1.3",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.3"
   }
 }
