--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.6",
-    "@angular/cdk": "~10.2.5",
-    "@angular/common": "~10.1.6",
-    "@angular/compiler": "~10.1.6",
-    "@angular/core": "~10.1.6",
-    "@angular/forms": "~10.1.6",
-    "@angular/material": "^10.2.5",
-    "@angular/platform-browser": "~10.1.6",
-    "@angular/platform-browser-dynamic": "~10.1.6",
-    "@angular/router": "~10.1.6",
-    "@tngtech/ngx-structurals": "^1.1.2",
+    "@angular/animations": "~11.0.3",
+    "@angular/cdk": "~11.0.2",
+    "@angular/common": "~11.0.3",
+    "@angular/compiler": "~11.0.3",
+    "@angular/core": "~11.0.3",
+    "@angular/forms": "~11.0.3",
+    "@angular/material": "^11.0.2",
+    "@angular/platform-browser": "~11.0.3",
+    "@angular/platform-browser-dynamic": "~11.0.3",
+    "@angular/router": "~11.0.3",
+    "@tngtech/ngx-structurals": "^1.1.3",
     "karma-junit-reporter": "^2.0.1",
     "pokesprite-spritesheet": "github:msikma/pokesprite-spritesheet#master",
     "rxjs": "~6.5.4",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
-    "@angular/cli": "~10.1.7",
-    "@angular/compiler-cli": "~10.1.6",
-    "@angular/language-service": "~10.1.6",
-    "@types/jasmine": "^3.5.14",
+    "@angular-devkit/build-angular": "~0.1100.3",
+    "@angular/cli": "~11.0.3",
+    "@angular/compiler-cli": "~11.0.3",
+    "@angular/language-service": "~11.0.3",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.11.10",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.5.0",
+    "@types/node": "^14.14.10",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   }
 }
