--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.0.3",
     "@tngtech/ngx-structurals": "^1.1.3",
     "karma-junit-reporter": "^2.0.1",
+    "ngx-markdown": "^11.0.1",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
