--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser": "~12.2.3",
     "@angular/platform-browser-dynamic": "~12.2.3",
     "@angular/router": "~12.2.3",
+    "@tngtech/ngx-structurals": "1.2.2",
     "karma-junit-reporter": "^2.0.1",
     "ngx-markdown": "^12.0.1",
-    "@tngtech/ngx-structurals": "1.2.2",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
@@ -48,6 +48,7 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
+    "raw-loader": "^4.0.2",
     "ts-node": "~8.10.2",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
