--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -15,7 +15,8 @@ jobs:
         with:
           find: "YOUR_GOOGLE_API_KEY"
           replace: ${{secrets.GOOGLE_API_KEY}}
-          include: "src/environments/"
+          include: "src/environments/**"
+          regex: false
       - name: All things angular
         uses: AhsanAyaz/angular-deploy-gh-pages-actions@v1.3.1 ## replace by latest version without it you will see Expected format {org}/{repo}[/path]@ref. Actual 'AhsanAyaz/angular-deploy-gh-pages-actions',Input string was not in a correct format.
         with:
