--- a/angular.json
+++ b/angular.json
@@ -112,15 +112,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         },
@@ -139,5 +135,8 @@
       }
     }
   },
-  "defaultProject": "poketrades"
+  "defaultProject": "poketrades",
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  }
 }
