--- a/package.json
+++ b/package.json
@@ -32,13 +32,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.3",
+    "@angular-eslint/builder": "12.6.1",
+    "@angular-eslint/eslint-plugin": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "12.6.1",
+    "@angular-eslint/schematics": "12.6.1",
+    "@angular-eslint/template-parser": "12.6.1",
     "@angular/cli": "~12.2.3",
     "@angular/compiler-cli": "~12.2.3",
     "@angular/language-service": "~12.2.3",
     "@types/jasmine": "~3.8.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^14.14.10",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
@@ -50,7 +57,6 @@
     "protractor": "~7.0.0",
     "raw-loader": "^4.0.2",
     "ts-node": "~8.10.2",
-    "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   }
 }
