--- a/package.json
+++ b/package.json
@@ -12,34 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/cdk": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/material": "^13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular/animations": "13.2.5",
+    "@angular/cdk": "13.2.5",
+    "@angular/common": "13.2.5",
+    "@angular/compiler": "13.2.5",
+    "@angular/core": "13.2.5",
+    "@angular/forms": "13.2.5",
+    "@angular/material": "13.2.5",
+    "@angular/platform-browser": "13.2.5",
+    "@angular/platform-browser-dynamic": "13.2.5",
+    "@angular/router": "13.2.5",
     "@tngtech/ngx-structurals": "1.2.2",
     "karma-junit-reporter": "^2.0.1",
-    "ngx-markdown": "^12.0.1",
+    "ngx-markdown": "^13.1.0",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
-    "rxjs": "~7.4.0",
+    "rxjs": "7.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.1",
+    "@angular-devkit/build-angular": "13.2.5",
     "@angular-eslint/builder": "12.6.1",
     "@angular-eslint/eslint-plugin": "12.6.1",
     "@angular-eslint/eslint-plugin-template": "12.6.1",
     "@angular-eslint/schematics": "12.6.1",
     "@angular-eslint/template-parser": "12.6.1",
-    "@angular/cli": "~13.0.1",
-    "@angular/compiler-cli": "~13.0.0",
-    "@angular/language-service": "~13.0.0",
+    "@angular/cli": "13.2.5",
+    "@angular/compiler-cli": "13.2.5",
+    "@angular/language-service": "13.2.5",
     "@types/jasmine": "~3.8.1",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^14.14.10",
