--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.2.5",
+    "@angular/animations": "^13.2.5",
     "@angular/cdk": "13.2.5",
     "@angular/common": "13.2.5",
     "@angular/compiler": "13.2.5",
     "@angular/core": "13.2.5",
     "@angular/forms": "13.2.5",
-    "@angular/material": "13.2.5",
+    "@angular/material": "^13.2.5",
     "@angular/platform-browser": "13.2.5",
     "@angular/platform-browser-dynamic": "13.2.5",
     "@angular/router": "13.2.5",
@@ -48,7 +48,7 @@
     "eslint": "7.32.0",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
+    "karma": "6.3.17",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-coverage-istanbul-reporter": "~3.0.3",
