--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "startHost": "ng serve --host=0.0.0.0",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
