--- a/angular.json
+++ b/angular.json
@@ -123,8 +123,9 @@
       }
     }
   },
-  "defaultProject": "poketrades",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
