--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.1",
+    "@angular/animations": "^14.0.3",
     "@angular/cdk": "14.0.1",
-    "@angular/common": "14.0.1",
-    "@angular/compiler": "14.0.1",
-    "@angular/core": "14.0.1",
-    "@angular/forms": "14.0.1",
+    "@angular/common": "14.0.3",
+    "@angular/compiler": "14.0.3",
+    "@angular/core": "14.0.3",
+    "@angular/forms": "14.0.3",
     "@angular/material": "^14.0.1",
-    "@angular/platform-browser": "14.0.1",
-    "@angular/platform-browser-dynamic": "14.0.1",
-    "@angular/router": "14.0.1",
+    "@angular/platform-browser": "14.0.3",
+    "@angular/platform-browser-dynamic": "14.0.3",
+    "@angular/router": "14.0.3",
     "@tngtech/ngx-structurals": "1.2.2",
     "karma-junit-reporter": "^2.0.1",
     "ngx-markdown": "^13.1.0",
@@ -30,21 +30,21 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.1",
-    "@angular-eslint/builder": "13.5.0",
-    "@angular-eslint/eslint-plugin": "13.5.0",
-    "@angular-eslint/eslint-plugin-template": "13.5.0",
-    "@angular-eslint/schematics": "13.5.0",
-    "@angular-eslint/template-parser": "13.5.0",
-    "@angular/cli": "14.0.1",
-    "@angular/compiler-cli": "14.0.1",
-    "@angular/language-service": "14.0.1",
+    "@angular-devkit/build-angular": "14.0.3",
+    "@angular-eslint/builder": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0",
+    "@angular-eslint/schematics": "14.0.0",
+    "@angular-eslint/template-parser": "14.0.0",
+    "@angular/cli": "14.0.3",
+    "@angular/compiler-cli": "14.0.3",
+    "@angular/language-service": "14.0.3",
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
-    "eslint": "8.17.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "jasmine-core": "~4.2.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "6.3.20",
