--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "15.1.0",
     "@angular/router": "15.1.0",
     "karma-junit-reporter": "^2.0.1",
+    "marked": "^4.2.12",
     "ngx-markdown": "^15.0.0",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
     "rxjs": "7.8.0",
@@ -40,7 +41,8 @@
     "@angular/language-service": "15.1.0",
     "@types/jasmine": "~4.3.1",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^14.18.31",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
