--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -24,4 +24,4 @@ jobs:
           build_configuration: production # The build environment for the app. please look configurations in your angular.json
           base_href: /poketrades/   # make sure this corresponds to https://<your_username>.github.io/<base_href>/
           deploy_branch: gh-pages # The branch the action should deploy to.
-          angular_dist_build_folder: dist/poketrades # The folder where your project is supposed to be after running ng build by the action.
+          angular_dist_build_folder: dist/poketrades/browser # The folder where your project is supposed to be after running ng build by the action.
