--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.9",
-    "@angular/cdk": "19.2.14",
-    "@angular/common": "19.2.9",
-    "@angular/compiler": "19.2.9",
-    "@angular/core": "19.2.9",
-    "@angular/forms": "19.2.9",
-    "@angular/material": "^19.2.14",
-    "@angular/platform-browser": "19.2.9",
-    "@angular/platform-browser-dynamic": "19.2.9",
-    "@angular/router": "19.2.9",
+    "@angular/animations": "^20.0.2",
+    "@angular/cdk": "20.0.2",
+    "@angular/common": "20.0.2",
+    "@angular/compiler": "20.0.2",
+    "@angular/core": "20.0.2",
+    "@angular/forms": "20.0.2",
+    "@angular/material": "^20.0.2",
+    "@angular/platform-browser": "20.0.2",
+    "@angular/platform-browser-dynamic": "20.0.2",
+    "@angular/router": "20.0.2",
     "marked": "^15.0.11",
     "ngx-markdown": "^19.1.1",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
@@ -28,15 +28,15 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.10",
     "@angular-eslint/builder": "19.3.0",
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/schematics": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
-    "@angular/cli": "19.2.10",
-    "@angular/compiler-cli": "19.2.9",
-    "@angular/language-service": "19.2.9",
+    "@angular/build": "^20.0.1",
+    "@angular/cli": "20.0.1",
+    "@angular/compiler-cli": "20.0.2",
+    "@angular/language-service": "20.0.2",
     "@types/marked": "^6.0.0",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
