--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "ngx-markdown": "^20.0.0",
     "pokesprite-spritesheet": "github:koenigderluegner/pokesprite-spritesheet#master",
     "rxjs": "7.8.2",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular-eslint/builder": "20.6.0",
@@ -37,15 +36,15 @@
     "@angular/cli": "21.0.0",
     "@angular/compiler-cli": "21.0.0",
     "@angular/language-service": "21.0.0",
+    "@standard-schema/spec": "^1.0.0",
     "@types/marked": "^6.0.0",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "@typescript-eslint/types": "^8.47.0",
+    "@typescript-eslint/utils": "^8.47.0",
     "eslint": "^9.22.0",
     "ts-node": "~8.10.2",
-    "typescript": "^5.9.3",
-    "@typescript-eslint/utils": "^8.47.0",
-    "@typescript-eslint/types": "^8.47.0",
-    "@standard-schema/spec": "^1.0.0"
+    "typescript": "^5.9.3"
   }
 }
