--- a/.github/workflows/deploy-angular.yml
+++ b/.github/workflows/deploy-angular.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Build
         run: npm run build -- --configuration production --base-href /poketrades/
 
+      - name: Copy index.html to 404.html
+        run: cp dist/poketrades/browser/index.html dist/poketrades/browser/404.html
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
